# cookiecutter-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.sh
{{cookiecutter.dist_name}}/: .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
{{cookiecutter.dist_name}}/.githooks/: post-checkout
{{cookiecutter.dist_name}}/scripts/: update_version_from_branch.py
{{cookiecutter.dist_name}}/{{cookiecutter.package_name}}/: __about__.py
